--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "aider-desk",
+  "name": "reactor",
   "version": "0.49.0-dev",
-  "description": "Aider desktop application wrapper",
+  "description": "Reactor - AI-powered coding assistant desktop application",
   "main": "./out/main/index.js",
-  "author": "Hotovo",
-  "homepage": "https://aiderdesk.hotovo.com",
+  "author": "DrOlu",
+  "homepage": "https://github.com/DrOlu/reactor",
   "repository": {
     "type": "git",
-    "url": "https://github.com/hotovo/aider-desk.git"
+    "url": "https://github.com/DrOlu/reactor.git"
   },
   "scripts": {
     "format": "prettier --write .",
